syntax = "proto3";

package datacloud.kafka.console.v1;

import "datacloud/console/v1/cluster.proto";
import "datacloud/console/v1/console.proto";
import "datacloud/kafka/v1/version.proto";

option go_package = "a.yandex-team.ru/cloud/mdb/datacloud/private_api/datacloud/kafka/console/v1;consolev1";
option java_package = "doublecloud.priv.kafka.console.v1";
option java_outer_classname = "DKCC";

message ClustersConfig {
    message Kafka {
        // Configuration of available resource presets for Apache Kafka® hosts.
        repeated datacloud.console.v1.ResourcePresetConfig resource_presets = 1;

        // ID of the default resource preset for Apache Kafka® hosts.
        string default_resource_preset_id = 2;
    }

    // Validation rules for cluster names.
    datacloud.console.v1.StringValidator name_validator = 1;

    // Available Apache Kafka® versions.
    repeated datacloud.kafka.v1.Version versions = 2;

    // Default Apache Kafka® version.
    string default_version = 3;

    // Available configurations of Apache Kafka® hosts.
    Kafka kafka = 4;

    // Hint for a cluster name
    string name_hint = 5;
}
