syntax = "proto3";

package datacloud.kafka.console.v1;

import "datacloud/console/v1/console.proto";
import "datacloud/kafka/console/v1/cluster.proto";
import "datacloud/kafka/v1/cluster_service.proto";

option go_package = "a.yandex-team.ru/cloud/mdb/datacloud/private_api/datacloud/kafka/console/v1;consolev1";
option java_package = "doublecloud.priv.kafka.console.v1";
option java_outer_classname = "DKCCS";

service ClusterService {
    rpc GetClustersConfig (GetClustersConfigRequest) returns (ClustersConfig);
    rpc EstimateCreate (kafka.v1.CreateClusterRequest) returns (datacloud.console.v1.BillingEstimate);
}

message GetClustersConfigRequest {
    string project_id = 1;

    string cloud_type = 2;

    string region_id = 3;
}
